web socket stuff

--- a/src/index.html
+++ b/src/index.html
@@ -11,4 +11,11 @@
 <body style="background-color:#F5F5F5">
   <app-root></app-root>
 </body>
+<!--Websocket Rails files -->
+<script src="assets/js/websockets/websocket_rails.js"></script>
+<script src="assets/js/websockets/event.js"></script>
+<script src="assets/js/websockets/abstract_connection.js"></script>
+<script src="assets/js/websockets/http_connection.js"></script>
+<script src="assets/js/websockets/websocket_connection.js"></script>
+<script src="assets/js/websockets/channel.js"></script>
 </html>
